log/build_2021-07-25_19-41-06/keystroke/streams.log
[0.247s] Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/colcon_core/executor/__init__.py", line 91, in __call__
    rc = await self.task(*args, **kwargs)
  File "/usr/lib/python3/dist-packages/colcon_core/task/__init__.py", line 93, in __call__
    return await task_method(*args, **kwargs)
  File "/usr/lib/python3/dist-packages/colcon_ros/task/ament_python/build.py", line 51, in build
    setup_py_data = get_setup_data(self.context.pkg, env)
  File "/usr/lib/python3/dist-packages/colcon_core/task/python/__init__.py", line 20, in get_setup_data
    return dict(pkg.metadata[key](env))
  File "/usr/lib/python3/dist-packages/colcon_ros/package_identification/ros.py", line 129, in getter
    return get_setup_information(
  File "/usr/lib/python3/dist-packages/colcon_python_setup_py/package_identification/python_setup_py.py", line 241, in get_setup_information
    _setup_information_cache[hashable_env] = _get_setup_information(
  File "/usr/lib/python3/dist-packages/colcon_python_setup_py/package_identification/python_setup_py.py", line 286, in _get_setup_information
    return ast.literal_eval(output)
  File "/usr/lib/python3.8/ast.py", line 59, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/usr/lib/python3.8/ast.py", line 47, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    {'package_data': {}, 'require_features': [], 'features': {}, 'dist_files': [], 'src_root': None, 'dependency_links': [], 'setup_requires': [], 'convert_2to3_doctests': [], 'eager_resources': None, 'entry_points': {'console_scripts': ['keystroke_listen = keystroke.listen:main', 'keystroke_arrows_to_twist = keystroke.arrows_to_twist:main']}, 'exclude_package_data': None, 'extras_require': {}, 'include_package_data': None, 'install_requires': ['pynput', 'setuptools'], 'namespace_packages': None, 'packages': ['keystroke'], 'python_requires': <SpecifierSet('>=3.5')>, 'test_loader': None, 'test_runner': None, 'test_suite': None, 'tests_require': None, 'use_2to3': None, 'use_2to3_exclude_fixers': None, 'use_2to3_fixers': None, 'zip_safe': True, 'pbr': None, 'use_incremental': None, 'verbose': 1, 'dry_run': 0, 'help': 0, 'command_packages': None, 'script_name': 'setup.py', 'script_args': ['--dry-run'], 'command_options': {'metadata': {'keywords': ('setup.cfg', 'ROS, ROS2, RoverRobotics'), 'classifiers': ('setup.cfg', '\nFramework :: ROS2\nIntended Audience :: Developers\nIntended Audience :: Science/Research\nProgramming Language :: Python\nProgramming Language :: Python :: Python3\nLicense :: OSI Approved :: BSD License\nTopic :: Software Development')}, 'options': {'packages': ('setup.cfg', 'find:'), 'zip_safe': ('setup.cfg', 'True'), 'install_requires': ('setup.cfg', '\npynput\nsetuptools'), 'python_requires': ('setup.cfg', '>=3.5')}, 'options.entry_points': {'console_scripts': ('setup.cfg', '\nkeystroke_listen = keystroke.listen:main\nkeystroke_arrows_to_twist = keystroke.arrows_to_twist:main')}, 'develop': {'script_dir': ('setup.cfg', '$base/lib/keystroke')}, 'install': {'install_scripts': ('setup.cfg', '$base/lib/keystroke')}}, 'package_dir': None, 'py_modules': None, 'libraries': None, 'headers': None, 'ext_package': None, 'include_dirs': None, 'extra_path': None, 'scripts': None, 'data_files': [('share/keystroke', ['package.xml']), ('share/keystroke/launch', ['launch/listen.launch.py', 'launch/teleop_twist.launch.py'])], 'password': '', 'command_obj': {}, 'have_run': {}, 'want_user_cfg': True, 'metadata': {'name': 'ros2-keystroke', 'version': '0.3.0', 'author': 'Rover Robotics', 'author_email': 'info@roverrobotics.com', 'maintainer': 'Dan Rose', 'maintainer_email': 'dan@digilabs.io', 'url': None, 'license': None, 'description': 'Capture keyboard input from the local computer and publish it to ROS', 'long_description': None, 'keywords': ['ROS', 'ROS2', 'RoverRobotics'], 'platforms': None, 'classifiers': ['Framework :: ROS2', 'Intended Audience :: Developers', 'Intended Audience :: Science/Research', 'Programming Language :: Python', 'Programming Language :: Python :: Python3', 'License :: OSI Approved :: BSD License', 'Topic :: Software Development'], 'download_url': None, 'provides': None, 'requires': None, 'obsoletes': None, 'long_description_content_type': None, 'project_urls': {}, 'python_requires': <SpecifierSet('>=3.5')>}}
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    ^
SyntaxError: invalid syntax
